--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "pg": "^4.4.4",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.19.1",
     "serve-favicon": "~2.3.0"
   }
 }
