--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-dev": "nodemon ./bin/www"
+    "start-dev": "env NODE_ENV='development' nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
