--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local-sequelize": "^0.6.0",
     "pg": "^4.4.4",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.19.1",
