--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
-    "passport-local-sequelize": "^0.6.0",
     "pg": "^4.4.4",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.19.1",
-    "serve-favicon": "~2.3.0"
+    "sequelize": "^3.19.1"
   }
 }
